se modificaron tipografias en nav y slogan. reubicacion del cartwidget. se ajusto el header. se crearon contenedores para justar estilos en vistas de products y category

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link href="https://fonts.cdnfonts.com/css/dashley" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/asmbuh" rel="stylesheet">
+
+  <link href="https://fonts.cdnfonts.com/css/nightfully-haunted" rel="stylesheet">
+                
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ecommerce</title>
 </head>
